# claude-code-playground

./: .gitignore  .mcp.json  CLAUDE.md  README.md  main.py  mcp_proxy.py  pyproject.toml
.claude/commands/: docs.md  explain.md  optimize-python.md
.playwright-mcp/: page-2026-07-08T10-35-47-586Z.yml
core/: database.py
